plugins {
    id("idea")
    id("eclipse")
    id("maven-publish")
    id("net.kyori.blossom") version "2.2.0" // https://github.com/KyoriPowered/blossom
    id("dev.ithundxr.silk") version "1.0.1" // https://github.com/ithundxr/silk
    id("net.neoforged.moddev") version "2.0.144" // https://projects.neoforged.net/neoforged/ModDevGradle
    id("me.modmuss50.mod-publish-plugin") version "1.1.0" // https://github.com/modmuss50/mod-publish-plugin
}

boolean dev = System.getenv("RELEASE") == null || System.getenv("RELEASE") == "false"
String buildNumber = System.getenv("BUILD_NUMBER")
String gitHash = calculateGitHash() + (hasUnstaged() ? "-modified" : "")

group = "com.simibubi.create"
version = mod_version + (dev && buildNumber != null ? "-${buildNumber}" : "")

java {
    toolchain.languageVersion = JavaLanguageVersion.of(25)
    withSourcesJar()
}

println("Java: ${System.getProperty("java.version")}, JVM: ${System.getProperty("java.vm.version")} (${System.getProperty("java.vendor")}), Arch: ${System.getProperty("os.arch")}")

idea {
    module {
        downloadJavadoc = true
        downloadSources = true
    }
}

neoForge {
    version = neo_version

    accessTransformers {
        publish(file("src/main/resources/META-INF/accesstransformer.cfg"))
    }

    if (parchment_version != "none") {
        parchment {
            minecraftVersion = parchment_minecraft_version == "same" ? minecraft_version : parchment_minecraft_version
            mappingsVersion = parchment_version
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }

    runs {
        configureEach {
            systemProperty("forge.logging.markers", "REGISTRIES")
            jvmArgument("-XX:+IgnoreUnrecognizedVMOptions")
            jvmArgument("-XX:+AllowEnhancedClassRedefinition")
            //jvmArgument("-XX:-OmitStackTraceInFastThrow") // uncomment when you get exceptions with null messages etc
            //jvmArgument("-XX:+UnlockCommercialFeatures") // uncomment for profiling

            systemProperty("mixin.debug.verbose", "true")
            systemProperty("mixin.debug.export", "true")

            systemProperty("neoforge.enabledGameTestNamespaces", mod_id as String)

            loggingConfigFile = project.file("log4j.xml")
        }

        client {
            client()
        }

        server {
            server()

            gameDirectory = project.file("run/server")

            programArgument("--nogui")
        }

        data {
            data()

            programArguments.addAll(
                "--mod", mod_id as String,
                "--all",
                "--output", file("src/generated/resources/").getAbsolutePath(),
                "--existing", file("src/main/resources/").getAbsolutePath()
            )
        }

        gameTestServer {
            type = "gameTestServer"
        }
    }
}

repositories {
    mavenLocal() // locally built Flywheel / Ponder / Registrate for 26.2
    maven { url = "https://maven.createmod.net" } // Ponder, Flywheel
    maven { url = "https://maven.ithundxr.dev/snapshots" } // Registrate
    maven { url = "https://maven.blamejared.com" } // JEI, Vazkii's Mods
    maven { url = "https://maven.theillusivec4.top/" } // Curios API
    maven { url = "https://maven.squiddev.cc" } // CC: Tweaked
    maven { url = "https://www.cursemaven.com" }
    maven { url = "https://api.modrinth.com/maven" }
    maven { url = "https://maven.ftb.dev/releases" } // FTB Mods
    maven { url = "https://maven.architectury.dev" } // Arch API
    // NeoForge config api port, needed by ponder
    maven { url = "https://raw.githubusercontent.com/Fuzss/modresources/main/maven" }
    maven {
        url = "https://jm.gserv.me/repository/maven-public" // JourneyMap
        content {
            includeGroup "info.journeymap"
            includeGroup "mysticdrew"
        }
    }
    maven { url "https://chocolateminecraft.com/maven" } // Xaero
}

configurations {
    localImplementation

    runtimeClasspath.extendsFrom(localImplementation)
    compileClasspath.extendsFrom(localImplementation)

    runtimeClasspath.extendsFrom(localRuntimeOnly)
}

dependencies {
    // Required dependencies
    jarJar(api("com.tterrag.registrate:Registrate:$registrate_version"))

    compileOnlyApi("dev.engine-room.flywheel:flywheel-neoforge:$flywheel_version:api")
    jarJar(runtimeOnly("dev.engine-room.flywheel:flywheel-neoforge:$flywheel_version") {
        version {
            strictly "[${flywheel_version},2.0)"
            prefer flywheel_version
        }
    })

    jarJar(api("net.createmod.ponder:neoforge:$ponder_version+mc$minecraft_version") {
        version {
            strictly "[$ponder_version+mc$minecraft_version,)"
            prefer "$ponder_version+mc$minecraft_version"
        }
    })

    // Local dependencies - not published to consumers
    localRuntimeOnly("dev.engine-room.vanillin:vanillin-neoforge-$minecraft_version:$vanillin_version")

    localImplementation("mezz.jei:jei-$minecraft_version-neoforge:$jei_version")

    compileOnly("top.theillusivec4.curios:curios-neoforge:$curios_version+$minecraft_version:api")
    localRuntimeOnly("top.theillusivec4.curios:curios-neoforge:$curios_version+$minecraft_version")

    compileOnly("maven.modrinth:sodium:mc$minecraft_version-$sodium_version-neoforge")

    if (cc_tweaked_enable.toBoolean()) {
        compileOnly("cc.tweaked:cc-tweaked-$minecraft_version-core-api:$cc_tweaked_version")
        compileOnly("cc.tweaked:cc-tweaked-$minecraft_version-forge-api:$cc_tweaked_version")
        localRuntimeOnly("cc.tweaked:cc-tweaked-$minecraft_version-forge:$cc_tweaked_version")
    }

    compileOnly("maven.modrinth:farmers-delight:${farmers_delight_version}")
    if (farmers_delight_enable.toBoolean()) {
        localImplementation("maven.modrinth:farmers-delight:${farmers_delight_version}")
    }

    localRuntimeOnly("dev.architectury:architectury-neoforge:13d.0.8")
    localImplementation("dev.ftb.mods:ftb-chunks-neoforge:2101.1.1")
    localImplementation("dev.ftb.mods:ftb-teams-neoforge:2101.1.0")
    localImplementation("dev.ftb.mods:ftb-library-neoforge:2101.1.3")

    localImplementation("maven.modrinth:journeymap:1.21.1-6.0.0-beta.54+neoforge")
    localImplementation("info.journeymap:journeymap-api-neoforge:2.0.0-1.21.1-20260205.200232-15") {
        exclude(group: "curse.maven") // Pulls in a old version of journey map which is for forge
    }

    compileOnly("xaero.lib:xaerolib-neoforge-1.21:1.0.42")
    compileOnly("curse.maven:xaeros-world-map-317780:7401095")
}

sourceSets.main {
    java {
        if (!cc_tweaked_enable.toBoolean()) {
            exclude("com/simibubi/create/compat/computercraft/implementation/**")
        }
    }

    resources {
        srcDir("src/generated/resources")
        exclude(".cache/")
        exclude("data/create/.wiki")
    }

    blossom.javaSources {
        property("version", mod_version)
        property("gitCommit", gitHash.toString())
    }
}

jar {
    from("LICENSE.md") {
        rename { "${mod_name}_${it}" }
    }
}

tasks.withType(Jar).configureEach {
    manifest.attributes([
        "Git-Hash": gitHash
    ])
}

// The gametest suite is deferred, not ported. 26.2 replaced the annotation
// driven framework (@GameTest, @GameTestGenerator) with the data driven
// GameTestInstance/TestData model, so those eight files need rewriting rather
// than fixing. Nothing outside the package references them, so excluding them
// keeps 88 errors of test-only code out of the way while the mod itself is
// ported. Delete the exclude to pick the work back up.
tasks.withType(JavaCompile).configureEach {
    exclude('**/infrastructure/gametest/**')
    options.compilerArgs.addAll(['-Xmaxerrs', '100000', '-Xmaxwarns', '100'])
    options.encoding = "UTF-8"
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
        "mod_version"           : mod_version,
        "mod_id"                : mod_id,
        "mod_name"              : mod_name,
        "mod_author"            : mod_author,
        "mod_description"       : mod_description,
        "mod_license"           : mod_license,
        "neo_version"           : neo_version,
        "minecraft_version"     : minecraft_version,
        "ponder_version"        : ponder_version,
        "flywheel_version_range": flywheel_version_range,
    ]
    inputs.properties(replaceProperties)
    expand(replaceProperties)
    from("src/main/templates")
    into("build/generated/sources/modMetadata")
}

sourceSets.main.resources.srcDir(generateModMetadata)
neoForge.ideSyncTask(generateModMetadata)

publishing {
    publications {
        register("mavenJava", MavenPublication) {
            from(components.java)
        }
    }

    repositories {
        maven {
            url = "https://maven.createmod.net"
            credentials {
                username = providers.environmentVariable("MAVEN_USERNAME").orNull
                password = providers.environmentVariable("MAVEN_PASSWORD").orNull
            }
        }
    }
}

publishMods {
    file = jar.archiveFile
    changelog = silk.changelog
    type = STABLE
    version = "$mod_version+mc$minecraft_version"
    displayName = "$mod_name $mod_version for mc$minecraft_version"
    modLoaders.add("neoforge")

    curseforge {
        accessToken = providers.environmentVariable("CURSEFORGE_TOKEN")
        projectId = "328085"
        minecraftVersions.add(minecraft_version)
    }

    modrinth {
        accessToken = providers.environmentVariable("MODRINTH_TOKEN")
        projectId = "LNytGWDc"
        minecraftVersions.add(minecraft_version)
    }

    github {
        accessToken = providers.environmentVariable("GITHUB_TOKEN")
        repository = "Creators-of-Create/Create"
        commitish = gitHash
        tagName = "mc$minecraft_version-$mod_version"
        file.unset()
        file.unsetConvention()

        allowEmptyFiles = true
    }
}

String calculateGitHash() {
    try {
        ExecOutput output = providers.exec {
            commandLine("git", "rev-parse", "HEAD")
        }
        return output.standardOutput.asText.get().trim()
    } catch (Throwable ignored) {
        return "unknown"
    }
}

boolean hasUnstaged() {
    try {
        ExecOutput output = providers.exec {
            commandLine("git", "status", "--porcelain")
        }
        String result = output.standardOutput.asText.get().replace("/M gradlew(\\.bat)?/", "").trim()
        if (!result.isEmpty())
            println("Found stageable results:\n ${result}\n")
        return !result.isEmpty()
    } catch (Throwable ignored) {
        return false
    }
}
